--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Подключение шрифта с помощью JavaScript</title>
 </head>
-<!-- <body>
+<body>
 
     <h1>Пример текста</h1>
 
@@ -25,5 +25,5 @@
         document.head.appendChild(style);
     </script>
 
-</body> -->
+</body>
 </html>
