--- a/index.html
+++ b/index.html
@@ -3,27 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Подключение шрифта с помощью JavaScript</title>
+    <title></title>
 </head>
 <body>
-
-    <h1>Пример текста</h1>
-
-    <script>
-        // Создаем новый стиль
-        var style = document.createElement('style');
-        style.type = 'text/css';
-
-        // Добавляем правило для шрифта
-        style.innerHTML = `
-            body {
-                font-family: 'YourFontName', sans-serif; /* Замените 'YourFontName' на название вашего шрифта */
-            }
-        `;
-
-        // Добавляем стиль к заголовку страницы
-        document.head.appendChild(style);
-    </script>
-
+    <script type="module" src="./js/task-1.js"></script>
 </body>
 </html>
